# PozdnyakovSergei

./: Laba3.c  Laba3new.c  laba4.c  laba5.c
OpenCV_RTC/: HelloOpenCV.cpp  ПоздняковСА_3331506-00401_Отчет.docx
OpenCV_RTC/Calibration/: CMakeLists.txt  Calibration.cpp
OpenCV_RTC/Deep_Image/: CMakeLists.txt  Deep_image.cpp
OpenCV_RTC/Hello/: CMakeLists.txt  HelloOpenCV.cpp
OpenCV_RTC/PCL_Test/: CMakeLists.txt  PCL_Test.cpp
OpenCV_RTC/TestImage/: CMakeLists.txt  TestImage.cpp
OpenCV_RTC/TestImageNew/: CMakeLists.txt  ImageFromFile.cpp
OpenCV_RTC/TestVideo/: CMakeLists.txt  VideoTest.cpp
OpenCV_RTC/WebcameraVideo/: CMakeLists.txt  WebCam.cpp  WebVideo.cpp
